# word-weave

./: .gitignore  ReadMe.md  cleanup.txt  docker-compose.yml  word-weave-microservice.sln
api-gateway/: .dockerignore  .gitignore  Dockerfile  ReadMe.md  package-lock.json  package.json
api-gateway/src/: index.js
comment-service/: .dockerignore  .gitignore  CommentService.csproj  Dockerfile  Program.cs  ReadMe.md  appsettings.Production.json  appsettings.json  init.sql
comment-service/Models/: Comment.cs
comment-service/Properties/: launchSettings.json
comment-service/Protos/: post.proto  (+5 more)
event-service/: .dockerignore  .gitignore  Dockerfile  Gemfile  ReadMe.md  test.rb
frontend-service/: .dockerignore  .env.example  .env.production  .gitignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
like-service/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  ReadMe.md  build.rs
like-service/src/: error.rs  main.rs
like-service/src/clients/: mod.rs  post_client.rs  user_client.rs
like-service/src/config/: env.rs  mod.rs
like-service/src/database/: mod.rs  surreal.rs
like-service/src/models/: like.rs  mod.rs
like-service/src/proto/: like.proto  post.proto  user.proto
like-service/src/repository/: like_repository.rs  mod.rs
like-service/src/service/: like_service.rs  mod.rs
media-service/: .gitignore  Dockerfile  ReadMe.md  requirements.txt
post-service/: .dockerignore  .gitignore  Dockerfile  ReadMe.md  main.go
user-service/: .dockerignore  Dockerfile  ReadMe.md  package-lock.json  package.json
(+133 files in other folders)
