[package]
name = "like-service"
version = "0.1.0"
edition = "2024"

[dependencies]
# gRPC and Protocol Buffers
tonic = "0.13.1"
prost = "0.13.5"
prost-types = "0.13.5"

# Async runtime
tokio = { version = "1.46.1", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
tokio-stream = "0.1.17"

# Database
surrealdb = { version = "2.3.7", features = ["kv-mem", "kv-rocksdb"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"

# Logging and tracing
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# Error handling
anyhow = "1.0.98"
thiserror = "2.0.12"

# Configuration management
config = "0.15.13"

# Health checks and metrics
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace"] }

# UUID generation
uuid = { version = "1.17.0", features = ["v4", "serde"] }

# Time and date handling
chrono = { version = "0.4.41", features = ["serde"] }

[build-dependencies]
tonic-build = "0.13.1"

[[bin]]
name = "server"
path = "src/main.rs"
